Sat Oct 26 17:48:54 2013  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb (meta_add_field): : Re-implemented.
	   [ruby-core:58017] [Bug #9051] patch by Eamonn Webster.

Sat Oct 26 14:35:09 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_profile_dump_on): use "Page" terminology.

Sat Oct 26 13:25:45 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_sweep, gc_heap_lazy_sweep): fix measurement code.
	  We only need one sweep time measurement without lazy sweep.

Sat Oct 26 11:59:13 2013  Tanaka Akira  <akr@fsij.org>

	* addr2line.c: Include ELF header after system headers (especially
	  sys/types.h) to avoid compilation failure,
	  "usr/include/sh3/elf_machdep.h:4:2: error: #error Define _BYTE_ORDER!",
	  on NetBSD/sh3 (dreamcast, hpcsh, landisk, mmeye).

Sat Oct 26 11:35:22 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: tuning parameters.

	* gc.c (GC_MALLOC_LIMIT): change default value to 16MB.

	* gc.c (GC_MALLOC_LIMIT_GROWTH_FACTOR): change default value to 2.0.

	* gc.c (gc_before_sweep): change decrease ratio of `malloc_limit'
	  from 1/4 to 1/10.

Sat Oct 26 11:30:07 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (vm_malloc_increase): do gc_rest_sweep() before GC.
	  gc_rest_sweep() can reduce malloc_increase, so try it before GC.
	  Otherwise, malloc_increase can be less than malloc_limit at
	  gc_before_sweep(). This means that re-calculation of malloc_limit
	  may be wrong value.

Sat Oct 26 06:35:41 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (gc_before_heap_sweep): Restructure code to mean clearly.
	  heap->freelist is connected to end of list.

Sat Oct 26 04:01:35 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_before_heap_sweep): fix freelist management.
	  After rb_gc_force_recycle() for a object blonging to heap->freelist,
	  `heap->using_page->freelist' is not null.

Thu Oct 24 21:57:24 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* parse.y: Remove +(binary) and -(binary) special cases
	  [Feature #9048]
